Updated logo overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@
 #logo {
 	width: 400px;
 	height: 400px;
+	overflow: hidden;
 }
 
 .about-header {
@@ -340,10 +341,6 @@ body {
 	.socialmedia {
 		width: 25px;
 		height: 25px;
-	}
-
-	#logo {
-		width: 50%;
 	}
 
 	 .navbar {
